# tracel-rspirv

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
autogen/src/: dr.rs  sr.rs
rspirv/: Cargo.toml  lib.rs
rspirv/binary/: autogen_parse_operand.rs  decoder.rs  parser.rs
rspirv/dr/: autogen_opencl_std_100.rs  loader.rs
rspirv/lift/: autogen_context.rs
rspirv/spirv/: autogen_spirv.rs
rspirv/sr/: autogen_decoration.rs  autogen_instructions.rs  autogen_ops.rs
xtask/src/: main.rs
