[package]
authors = ["Lei Zhang <antiagainst@gmail.com>"]
edition = "2018"
name = "tracel-rspirv"
version = { workspace = true }

description = "Rust library APIs for SPIR-V module manipulation"
documentation = "https://docs.rs/rspirv"
keywords = ["spirv", "vulkan", "opengl", "opencl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gfx-rs/rspirv"

[lib]
path = "lib.rs"

[features]
deserialize = ['serde', 'bitflags/serde']
serialize = ['serde', 'bitflags/serde']

[dependencies]
bitflags = "2.9.4"
rustc-hash = "2.1.0"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
assert_matches = "1.1"
